feat: added typst and pandoc setup
added extensions and git hooks too

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -6,7 +6,8 @@
         "mkhl.direnv",
         "christian-kohler.path-intellisense",
         "tonybaloney.vscode-pets",
-        "james-yu.latex-workshop"
+        "james-yu.latex-workshop",
+        "myriad-dreamin.tinymist"
       ]
     }
   },
