--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -2,9 +2,6 @@
 name: Bump version
 
 # Allow for releases
-permissions:
-  contents: write
-
 on:
   push:
     branches:
@@ -15,19 +12,28 @@ jobs:
     if: ${{ !startsWith(github.event.head_commit.message, 'bump:') }}
     runs-on: ubuntu-latest
     name: "Bump version and create changelog with commitizen"
+    permissions:
+      contents: write
     steps:
       - name: Check out
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
           token: "${{ secrets.PERSONAL_ACCESS_TOKEN }}"
-      - name: Import GPG key
+
+      - id: gpg
+        name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v6
         with:
+          git_user_signingkey: true
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
-          git_user_signingkey: true
           git_commit_gpgsign: true
+          git_tag_gpgsign: true
+          git_push_gpgsign: true
+          git_config_global: true
+          trust_level: 5
+
       - id: cz
         name: Create bump and changelog
         uses: commitizen-tools/commitizen-action@master
@@ -35,7 +41,10 @@ jobs:
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           changelog_increment_filename: body.md
           git_redirect_stderr: true
-          gpg_sign: true
+          gpg_sign: false
+          git_name: ${{ steps.gpg.outputs.name }}
+          git_email: ${{ steps.gpg.outputs.email }}
+
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
