--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -1,7 +1,6 @@
 # https://github.com/commitizen-tools/commitizen-action/blob/673655ac2d9dbb1b6773c3b6191f78d9b3d2e4fa/.github/workflows/bumpversion.yaml
 name: Bump version
 
-# Allow for releases
 on:
   push:
     branches:
@@ -12,6 +11,7 @@ jobs:
     if: ${{ !startsWith(github.event.head_commit.message, 'bump:') }}
     runs-on: ubuntu-latest
     name: "Bump version and create changelog with commitizen"
+    # Allow for releases
     permissions:
       contents: write
     steps:
@@ -30,7 +30,6 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           git_commit_gpgsign: true
           git_tag_gpgsign: true
-          git_push_gpgsign: true
           git_config_global: true
           trust_level: 5
 
@@ -41,9 +40,9 @@ jobs:
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           changelog_increment_filename: body.md
           git_redirect_stderr: true
-          gpg_sign: false
-          git_name: ${{ steps.gpg.outputs.name }}
-          git_email: ${{ steps.gpg.outputs.email }}
+          # gpg_sign: true
+          # git_name: ${{ steps.gpg.outputs.name }}
+          # git_email: ${{ steps.gpg.outputs.email }}
 
       - name: Release
         uses: softprops/action-gh-release@v1
